# mdcomp

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  COPYING-asm  COPYING-asm.md  COPYING.md  Makefile.am  README.md  autogen.sh  compile_commands.json  configure.ac  make_compdb.sh
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  coverity-scan.yml  released.yml  snapshots-windows.yml
.travis/: script.sh
include/mdcomp/: artc42.hh  basic_decoder.hh  bigendian_io.hh  bitstream.hh  comper.hh  comperx.hh  enigma.hh  function_ref.hh  ignore_unused_variable_warning.hh  kosinski.hh  kosplus.hh  lzkn1.hh  lzss.hh  moduled_adaptor.hh  nemesis.hh  options_lib.hh  rocket.hh  saxman.hh  snkrle.hh  stream_utils.hh
m4/: ax_boost_program_options.m4  ax_check_preproc_flag.m4  ax_cxx_compile_stdcxx_11.m4
src/: Makefile.am
src/asm/: CompDec.asm  Comper.asm  ComperX.asm  Enigma.asm  KosM.asm  Kosinski.a80  Kosinski.asm  KosinskiPlus.a80  KosinskiPlus.asm  Kosinski_internal.asm  Rocket.asm  SNKRLE.asm  Saxman.asm
src/lib/: Makefile.am  artc42.cc  artc42.h  basic_decoder.cc  basic_decoder.h  basic_decoder.hh  bigendian_io.cc  bigendian_io.h  bigendian_io.hh  bitstream.cc  bitstream.h  bitstream.hh  comper.cc  comper.h  comper.hh  comperx.cc  enigma.cc  enigma.h  enigma.hh  ignore_unused_variable_warning.cc  ignore_unused_variable_warning.h  kosinski.cc  kosinski.h  kosinski.hh  kosplus.cc  kosplus.h  kosplus.hh  lzkn1.cc  lzss.cc  lzss.h  lzss.hh  mkosinski.cc  mkosinski.h  moduled_adaptor.cc  moduled_adaptor.h  moduled_adaptor.hh  nemesis.cc  nemesis.h  nemesis.hh  options_lib.cc  (+9 more)
src/tools/: Makefile.am  compcmp.cc  comperx.cc  enicmp.cc  koscmp.cc  kosplus.cc  lzkn1cmp.cc  mkoscmp.cc  nemcmp.cc  rockcmp.cc  saxcmp.cc  snkcmp.cc
